# cocos-engine-external

android/: CMakeLists.txt  xr.cmake
android/arm64-v8a/include/ar/: ARAndroidLib.h  ARNDKLib.h
android/armeabi-v7a/include/ar/: ARAndroidLib.h  ARNDKLib.h
sources/: CMakeLists.txt
sources/xr/: CMakeLists.txt  XRCommon.h  Xr.h
sources/xr/seed/android/java/: proguard-rules.pro
